# grimoire

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/migrations/: 20241106041813_nodes.sql
core/src/: arena.rs  db.rs  dependency.rs  document.rs  entry.rs  index.rs  lib.rs  markdown.rs  memory.rs  mode.rs  node.rs  path.rs  util.rs
core/src/db/: mod.rs  types.rs
core/src/document/: body.rs  head.rs  mod.rs
core/src/markdown/: heading.rs  mod.rs  toc.rs  util.rs
core/src/node/: kind.rs  mod.rs  path.rs
core/src/storage/: entry.rs  mod.rs  read.rs  util.rs
web/: .prettierrc  Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.css
web/js/controllers/: test.ts
web/js/packs/: base.ts
web/public/: fa.css
web/src/: app.rs  grimoire.rs  lib.rs  render.rs  routes.rs
web/src/binary/: mod.rs  unpack.rs
web/src/render/: error.rs  globals.rs  mod.rs
web/src/routes/: artifact.rs  index.rs  node.rs
web/src/serve/: error.rs  globals.rs  mod.rs
web/templates/: error.html  index.html  layout.html  node.html  page.html
web/templates/layout/: page.html  skeleton.html
web/tools/: iconfix.mjs
