[workspace]
resolver = "2"
members = ["core", "cli", "web"]

[workspace.dependencies]
anyhow = "1.0.91"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
