[package]
name = "grimoire-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
camino.workspace = true
futures.workspace = true
gray_matter = "0.2.8"
serde.workspace = true
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "migrate",
  "sqlite",
  "uuid",
  "chrono",
  "json",
] }
tokio.workspace = true
tracing.workspace = true
