[package]
name = "grimoire-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.7"
camino.workspace = true
grimoire-lib = { package = "grimoire", path = "../core" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
