[package]
name = "grimoire-web"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
anyhow.workspace = true
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.7"
camino.workspace = true
futures.workspace = true
grimoire-core = { path = "../core" }
serde.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.1", features = ["fs"] }
tracing.workspace = true

[build-dependencies]
anyhow.workspace = true
bytes = "1.8.0"
camino.workspace = true
directories = "5.0.1"
flate2 = "1.0.34"
flume = "0.11.1"
futures.workspace = true
reqwest = { version = "0.12.9", features = ["stream"] }
tar = "0.4.43"
tokio.workspace = true
url = "2.5.3"
